# vlad17.github.io

./: .gitignore  2021-10-01-topfew.md  404.html  CNAME  Gemfile  LICENSE  README.md  _config.yml  about.md  categories.md  docker-compose.yaml  education.md  featured.md  index.html  mdconvert.sh  prng.py  projects.md  search.html  work.md
_data/: projects.json
_includes/: navigation.html  sidemenu-deprecated.html  sidemenu.html  tex-preamble.html
_layouts/: about.html  categories-home.html  default.html  featured.html  post.html  posts_by_category.html  project.html
_posts/: 2016-07-09-introduction-to-the-paper-blog.md  2016-07-09-ligra.md  2016-07-17-ad-click-prediction.md  2016-09-17-mapreduce.md  2016-11-03-my-princeton-junior-year-research.md  2017-01-24-semaphore-barrier.md  2017-01-25-semaphore-answer.md  2017-01-25-semaphore-barrier.md  2017-05-23-my-princeton-senior-thesis.md  2017-05-25-jupyter-tricks.md  2017-06-19-neural-network-optimization-methods.md  2017-06-19-nonconvex-first-order-methods.md  2017-06-19-nonconvex-second-order-methods.md  2017-06-20-nonconvex-first-order-methods.md  2017-06-20-nonconvex-second-order-methods.md  2017-06-22-nonconvex-second-order-methods.md  2017-07-09-deep-learning-learning.md  2017-12-23-beating-tf-api-in-vram.md  2018-11-03-duplicates.md  2018-12-22-subgaussian-concentration.md  2019-01-19-numpy-gems-1.md  2019-03-09-dl-intro.md  2019-06-22-bert-pt-2-transformer.md  2019-06-23-bert-pt3-bert.md  (+35 more)
assets/blog-nb/: 2021-09-15-scatter-reduction.ipynb  pyproject.toml
assets/blog-nb/tests/: test_blog_nb.py
(+51 files in other folders)
