[tool.poetry]
name = "blog-nb"
version = "0.1.0"
description = ""
authors = ["Vladimir Feinberg <vladimir.feinberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
